--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1571,3 +1571,46 @@ section {
 #footer .footer-links a:hover {
   color: #3498db;
 }
+
+/*--------------------------------------------------------------
+# Login
+--------------------------------------------------------------*/
+
+.gradient-custom-2 {
+  /* fallback for old browsers */
+  background: #aff39ce8;
+
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-linear-gradient(to right, #5675fc, #7edc57);
+
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(to right, #7edc57, #5675fc);
+}
+
+@media (min-width: 768px) {
+  .gradient-form {
+    height: 100vh !important;
+  }
+}
+@media (min-width: 769px) {
+  .gradient-custom-2 {
+    border-top-right-radius: .3rem;
+    border-bottom-right-radius: .3rem;
+  }
+}
+
+.btn {
+  width: 240px;
+  height: 36px;
+}
+
+.btn-outline-danger {
+  /* fallback for old browsers */
+  background: #aff39ce8;
+
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-linear-gradient(to right, #5675fc, #7edc57);
+
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(to right, #7edc57, #5675fc);
+}
