created login form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1614,3 +1614,7 @@ section {
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   background: linear-gradient(to right, #7edc57, #5675fc);
 }
+
+.btn-outline-danger {
+  color: fff;
+}
