--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1576,45 +1576,14 @@ section {
 # Login
 --------------------------------------------------------------*/
 
-.gradient-custom-2 {
-  /* fallback for old browsers */
-  background: #aff39ce8;
-
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-linear-gradient(to right, #5675fc, #7edc57);
-
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: linear-gradient(to right, #7edc57, #5675fc);
+.divider:after,
+.divider:before {
+  content: "";
+  flex: 1;
+  height: 1px;
+  background: #eee;
 }
 
-@media (min-width: 768px) {
-  .gradient-form {
-    height: 100vh !important;
-  }
-}
-@media (min-width: 769px) {
-  .gradient-custom-2 {
-    border-top-right-radius: .3rem;
-    border-bottom-right-radius: .3rem;
-  }
-}
-
-.btn {
-  width: 240px;
-  height: 36px;
-}
-
-.btn-outline-danger {
-  /* fallback for old browsers */
-  background: #aff39ce8;
-
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-linear-gradient(to right, #5675fc, #7edc57);
-
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: linear-gradient(to right, #7edc57, #5675fc);
-}
-
-.btn-outline-danger {
-  background-color: white;
+.btn .btn-primary .btn-lg .btn-block {
+  align-self: center;
 }
